# fraud-detection-pipeline-claudflare

./: .gitignore  Cargo.toml  Dockerfile  Makefile  QUICKSTART.md  README.md  TUNING_IMPROVEMENT.md  alerts_20251213_083542.json  all_model_performance_result.md  docker-compose.yml  performance_test_result_with_ensemble_mode.md  rust_mode_comparison.md  rust_mode_comparison.txt
config/: config.toml
models/: .gitkeep
scripts/python/: Makefile  README.md  requirements.txt
scripts/python/src/: evaluate.py  preprocess.py  train.py
scripts/r/: Makefile  README.md  fraud-detection-r.Rproj  install_packages.R  model_analysis.Rmd  model_analysis.html  model_report.Rmd  model_report.html  run_analysis.R
scripts/r/data/: .gitkeep
scripts/r/src/: evaluate.R  preprocess.R  train.R
src/: config.rs  consumer.rs  feature_extractor.rs  lib.rs  main.rs  metrics.rs  producer.rs
src/models/: aggregator.rs  inference.rs  loader.rs  mod.rs
src/types/: alert.rs  mod.rs  transaction.rs
tools/: analyze_results.py  benchmark_sender.py  fix_onnx_models.py  inspect_onnx_detailed.py  inspect_onnx_models.py  receive_alerts.py  send_test_data.py  test_producer.rs
training/: Dockerfile  requirements.txt  train.py  train_tuned.py
training/catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
training/data/: .gitkeep  credit_card_default.parquet  test.parquet  train.parquet
training/notebooks/: model_comparison.ipynb
training/src/: __init__.py  evaluation.py  export_onnx.py  feature_engineering.py  preprocessing.py  tuning.py
(+8 files in other folders)
